# crafting-interpreters-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
src/: ast_printer.cpp  ast_printer.h  expr.h  interpreter.cpp  interpreter.h  lox.cpp  lox.h  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  token.h  token_type.h
tools/: GenerateAst.cpp
